# chorus-extract-upload

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  test.sh
.github/workflows/: chorus-extract-image.yml
azure_file_transfer/: batch_transfer.py
chorus_upload/: __init__.py  __main__.py  config.toml.template  config_helper.py  db_analysis.py  defaults.py  history_ops.py  journaldb_ops.py  local_ops.py  perf_counter.py  remote_file_ops.py  script_generators.py  storage_helper.py  template.config.toml  upload_ops.py
chorus_upload/create_test_data/: __init__.py  __main__.py  generate_file_structure.py
chorus_upload_journal/: README.md  __init__.py
chorus_upload_journal/journal_tools/: __main__.py  journal_tools.py
chorus_upload_journal/upload_tools/: __main__.py  config.toml.template  config_helper.py  generate_manifest.py  history_ops.py  local_ops.py  storage_helper.py  storage_pathlib.py  upload_ops.py
journal_tools/: __main__.py
tests/: README.md  az_sandbox.py  pyproject.toml  test.sh
tests/create_test_data/: __main__.py  generate_file_structure.py
upload_manifest/: LICENSE  README.md  journal.db
upload_manifest/TestData/SiteFolder_FirstSnapshot/1042450/Waveforms/: 1042450_20230106_105241_1618595  1042450_20230206_052124_10252613  1042450_20230802_031453_5737988  1042450_20231109_152411_1176532
upload_manifest/TestData/SiteFolder_FirstSnapshot/1271493/Waveforms/: 1271493_20230101_103906_16523378  1271493_20230826_161739_448580  1271493_20230917_123821_1412649  1271493_20231118_140632_1326726
upload_manifest/TestData/SiteFolder_FirstSnapshot/1403958/Images/: 1403958_20230209_023611_7700609  1403958_20230703_094120_2941750
upload_manifest/TestData/SiteFolder_FirstSnapshot/1403958/OMOP/: 1403958_20230831_205359_1439062  1403958_20231101_221031_1335373
upload_manifest/TestData/SiteFolder_FirstSnapshot/1403958/Waveforms/: 1403958_20230224_063130_3716507  1403958_20230428_200446_1836657  1403958_20230829_043700_4611560  1403958_20231101_103156_1545326  1403958_20231107_105819_3702519
upload_manifest/TestData/SiteFolder_FirstSnapshot/1424604/Waveforms/: 1424604_20230710_012900_625919  1424604_20230803_031059_5210807
upload_manifest/TestData/SiteFolder_FirstSnapshot/1441001/Images/: 1441001_20230125_042916_6650915  1441001_20230802_031453_8600958
upload_manifest/TestData/SiteFolder_FirstSnapshot/1441001/OMOP/: 1441001_20230225_080838_2657830  1441001_20231108_221030_5556
upload_manifest/TestData/SiteFolder_FirstSnapshot/1441001/Waveforms/: 1441001_20230321_105214_1879537  1441001_20230621_231204_1151468  1441001_20230722_122205_1045893  1441001_20230726_205110_2326612  (+2 more)
upload_manifest/create_test_data/: __main__.py  generate_file_structure.py
upload_manifest/generate_manifest/: __main__.py  config.toml.template  config_helper.py  generate_manifest.py  storage_pathlib.py
(+109 files in other folders)
