[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "chorus_upload"
authors = [
    {name = "Will Ashe"},
    {name = "Tony Pan"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "cloudpathlib == 0.18.1",
    "cloudpathlib[azure] == 0.18.1",
    "tomli"
]

[project.optional-dependencies]
s3 = ["cloudpathlib[s3] == 0.18.1",
]
gs = ["cloudpathlib[gs] == 0.18.1",
]
